--- a/src/header.html
+++ b/src/header.html
@@ -1,1 +1,48 @@
-<h1>Nav and header template goes here</h1>
+<header class="navbar">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6">
+            </div>
+            <div class="col-xs-6">
+                <a href="#cd-nav" class="cd-nav-trigger">Menu 
+        <span class="cd-nav-icon"></span>
+
+        <svg x="0px" y="0px" width="54px" height="54px" viewBox="0 0 54 54">
+            <circle fill="transparent" stroke="#656e79" stroke-width="1" cx="27" cy="27" r="25" stroke-dasharray="157 157" stroke-dashoffset="157"></circle>
+        </svg>
+    </a>
+            </div>
+        </div>
+    </div>
+</header>
+<nav id="cd-nav" class="cd-nav">
+    <div class="cd-navigation-wrapper">
+        <div class="col-sm-6">
+            <div class="centered-nav">
+                <ul class="cd-primary-nav">
+                    <li><a href="#0" class="selected">Home</a></li>
+                    <li><a href="#0">Map</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- .cd-half-block -->
+        <div class="col-sm-6">
+            <div class="centered-nav">
+                <h2>Destinations</h2>
+                <ul class="cd-destinations-nav">
+                    <li><a href="#0">Japan</a></li>
+                    <li><a href="#0">Vietnam</a></li>
+                    <li><a href="#0">Cambodia</a></li>
+                    <li><a href="#0">Thailand</a></li>
+                    <li><a href="#0">Malaysia</a></li>
+                    <li><a href="#0">Indonesia</a></li>
+                    <li><a href="#0">Turkey</a></li>
+                    <li><a href="#0">Greece</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- .cd-half-block -->
+    </div>
+    <!-- .cd-navigation-wrapper -->
+</nav>
+<!-- .cd-nav -->
