Add country pages/map/photoswipe/masonry etc

--- a/src/header.html
+++ b/src/header.html
@@ -1,7 +1,9 @@
+<div class="preloader"><span class="preloader-gif">Loading.....</span></div>
 <header class="navbar">
     <div class="container">
         <div class="row">
             <div class="col-xs-6">
+                <a href="/"><span class="icon icon-travel"></span></a>
             </div>
             <div class="col-xs-6">
                 <a href="#cd-nav" class="cd-nav-trigger">Menu 
@@ -20,8 +22,8 @@
         <div class="col-sm-6">
             <div class="centered-nav">
                 <ul class="cd-primary-nav">
-                    <li><a href="#0" class="selected">Home</a></li>
-                    <li><a href="#0">Map</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/map.html">Map</a></li>
                 </ul>
             </div>
         </div>
@@ -30,14 +32,13 @@
             <div class="centered-nav">
                 <h2>Destinations</h2>
                 <ul class="cd-destinations-nav">
-                    <li><a href="#0">Japan</a></li>
-                    <li><a href="#0">Vietnam</a></li>
-                    <li><a href="#0">Cambodia</a></li>
-                    <li><a href="#0">Thailand</a></li>
-                    <li><a href="#0">Malaysia</a></li>
-                    <li><a href="#0">Indonesia</a></li>
-                    <li><a href="#0">Turkey</a></li>
-                    <li><a href="#0">Greece</a></li>
+                    <li><a href="/japan.html">Japan</a></li>
+                    <li><a href="/vietnam.html">Vietnam</a></li>
+                    <li><a href="/cambodia.html">Cambodia</a></li>
+                    <li><a href="/thailand.html">Thailand</a></li>
+                    <li><a href="/malaysia.html">Malaysia</a></li>
+                    <li><a href="/indonesia.html">Indonesia</a></li>
+                    <li><a href="/turkey.html">Turkey</a></li>
                 </ul>
             </div>
         </div>
