--- a/src/header.html
+++ b/src/header.html
@@ -1,4 +1,8 @@
-<div class="preloader"><span class="preloader-gif">Loading.....</span></div>
+<div class="preloader">
+    <span class="preloader-gif"><span class="icon-suitcase"></span>Loading...</span>
+    <span class="preloader-gif"><span class="icon-map"></span>Φορτώνει...</span>
+    <span class="preloader-gif"><span class="icon-take-off"></span>Caricamento...</span>
+</div>
 <header class="navbar">
     <div class="container">
         <div class="row">
