--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
         <section class="white-stripe">
             <div class="container">                
-                <p class="intro-text">Today it's Wednesday, 15th of April and we are in Japan!</p>
+                <p class="intro-text">Today it's Thursday the 18th of February and we are in Japan!</p>
             </div>
         </section>
 
