Lots of updates

--- a/src/header.html
+++ b/src/header.html
@@ -1,3 +1,13 @@
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74292233-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <div class="preloader">
     <span class="preloader-gif"><span class="icon-suitcase"></span>Loading...</span>
     <span class="preloader-gif"><span class="icon-map"></span>Φορτώνει...</span>
@@ -7,10 +17,10 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-6">
-                <a href="/"><span class="icon icon-travel"></span></a>
+                <a href="/" title="Return to the homepage"><span class="icon icon-travel">Travel</span></a>
             </div>
             <div class="col-xs-6">
-                <a href="#cd-nav" class="cd-nav-trigger">Menu 
+                <a href="#cd-nav" title="Menu" class="cd-nav-trigger">Menu 
         <span class="cd-nav-icon"></span>
 
         <svg x="0px" y="0px" width="54px" height="54px" viewBox="0 0 54 54">
