--- a/src/map.html
+++ b/src/map.html
@@ -41,7 +41,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
     
-    <title>Follow our journey | Vasilis & Giulia</title>
+    <title>Follow our journey | View map</title>
 </head>
 
 <body>
