--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-touch-icon-60x60.png">
@@ -57,13 +57,13 @@
                     <div class="col-xs-4 col-sm-3"><p class="numbers-count"><span>7</span> countries</p></div>      
                     <div class="col-xs-2 col-sm-3"></div>          
                 </div>
-                <span class="counter days"><span class="icon icon-daycount"></span>Day 12</span>
+                <span class="counter"><span class="icon icon-daycount"></span>Day <span class="daycount">0</span></span>
             </div>
         </section>
 
         <section class="white-stripe">
             <div class="container">                
-                <p class="intro-text">Today it's Thursday the 18th of February and we are in Japan!</p>
+                <p class="intro-text">Today it's <span id="today"></span> and we are still in Edinburgh...</p>
             </div>
         </section>
 
@@ -102,7 +102,7 @@
                         </div>
                     </a>                        
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">28 April - ...</span>
                     </div>                                    
                 </div>
                 <div class="row">
@@ -112,7 +112,7 @@
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">To be confirmed</span>
                     </div>                    
                 </div>
                 <div class="row">   
@@ -122,7 +122,7 @@
                         </div>
                     </a>                  
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">To be confirmed</span>
                     </div>                                       
                 </div>
                 <div class="row">
@@ -132,7 +132,7 @@
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">To be confirmed</span>
                     </div>                    
                 </div>
                 <div class="row">  
@@ -142,7 +142,7 @@
                         </div>
                     </a>                   
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">To be confirmed</span>
                     </div>                                       
                 </div>
                 <div class="row">
@@ -152,7 +152,7 @@
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <span class="icon icon-calendar">To be confirmed</span>
                     </div>                    
                 </div>                
             </div>
@@ -166,6 +166,20 @@
     </main>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
+    
+    <script type="text/javascript">
+        document.getElementById("today").innerHTML = formatAMPM();
+
+        function formatAMPM() {
+        var d = new Date(),
+            minutes = d.getMinutes().toString().length == 1 ? '0'+d.getMinutes() : d.getMinutes(),
+            hours = d.getHours().toString().length == 1 ? '0'+d.getHours() : d.getHours(),
+            ampm = d.getHours() >= 12 ? 'pm' : 'am',
+            months = ['January','February','March','April','May','June','July','August','September','October','November','December'],
+            days = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
+        return days[d.getDay()]+' the '+d.getDate()+'th of '+months[d.getMonth()];
+        };
+    </script>
 </body>
 
 </html>
