--- a/src/japan.html
+++ b/src/japan.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-touch-icon-60x60.png">
@@ -56,7 +56,7 @@
                 <h1>Japan</h1>
                 <h2>日本</h2>                
                 <a href="#" class="view-pics btn btn-default">View photos</a>
-                <span class="counter days"><span class="icon icon-watch"></span>03:45</span>
+                <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Asia/Tokyo"></span></span>
             </div>
         </section>
 
@@ -306,6 +306,9 @@
     <script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.js"></script>
     <script src="js/masonry-config.js"></script>
 
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" type="text/javascript"></script>
+    <script src="http://momentjs.com/downloads/moment-timezone-with-data-2010-2020.min.js" type="text/javascript"></script>
+    
     <script src="js/main.js" type="text/javascript"></script>
 
 </body>
