--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
     <!-- /build -->
     <main>
         <section class="home-banner">
+            <i></i>
             <div class="container">
                 <h1>Follow our journey</h1>
                 <h2>Around Asia</h2>
@@ -68,6 +69,7 @@
         </section>
 
         <section class="map-cta">
+            <i></i>
             <div class="container">                
                 <div class="row">
                     <div class="col-sm-12">
@@ -87,72 +89,79 @@
             <div class="container">                
                 <div class="row">
                     <a href="japan.html">
-                        <div class="country-block jp col-sm-6">
+                        <div class="country-block col-sm-6">
+                            <i class="jp"></i>
                             Japan
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">11 April - 28 April</span>
+                        <div><span class="icon icon-calendar"></span>11 April - 28 April</div>
                     </div>                    
                 </div>
                 <div class="row">
                     <a href="vietnam.html">
-                        <div class="country-block vt reverse col-sm-6 col-sm-push-6">
+                        <div class="country-block reverse col-sm-6 col-sm-push-6">
+                            <i class="vt"></i>
                             Vietnam
                         </div>
                     </a>                        
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">28 April - ...</span>
+                        <div><span class="icon icon-calendar"></span>28 April - ...</div>
                     </div>                                    
                 </div>
                 <div class="row">
                     <a href="cambodia.html">
                         <div class="country-block cb col-sm-6">
+                            <i class="cb"></i>
                             Cambodia
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">To be confirmed</span>
+                        <div><span class="icon icon-calendar"></span>To be confirmed</div>
                     </div>                    
                 </div>
                 <div class="row">   
                     <a href="thailand.html">
-                        <div class="country-block th reverse col-sm-6 col-sm-push-6">
+                        <div class="country-block reverse col-sm-6 col-sm-push-6">
+                            <i class="th"></i>
                             Thailand
                         </div>
                     </a>                  
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">To be confirmed</span>
+                        <div><span class="icon icon-calendar"></span>To be confirmed</div>
                     </div>                                       
                 </div>
                 <div class="row">
                     <a href="malaysia.html">
-                        <div class="country-block ml col-sm-6">
+                        <div class="country-block col-sm-6">
+                            <i class="ml"></i>
                             Malaysia
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">To be confirmed</span>
+                        <div><span class="icon icon-calendar"></span>... - 6 July</div>
                     </div>                    
                 </div>
                 <div class="row">  
                     <a href="indonesia.html">
-                        <div class="country-block in reverse col-sm-6 col-sm-push-6">
+                        <div class="country-block reverse col-sm-6 col-sm-push-6">
+                            <i class="in"></i>
                             Indonesia
                         </div>
                     </a>                   
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <span class="icon icon-calendar">To be confirmed</span>
+                        <div><span class="icon icon-calendar"></span>6 July - 28 July</div>
                     </div>                                       
                 </div>
                 <div class="row">
                     <a href="turkey.html">
                         <div class="country-block tr col-sm-6">
+                            <i class="tr"></i>
                             Turkey
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <span class="icon icon-calendar">To be confirmed</span>
+                        <div><span class="icon icon-calendar"></span>28 July - 3 August</div>
                     </div>                    
                 </div>                
             </div>
