--- a/src/japan.html
+++ b/src/japan.html
@@ -50,7 +50,8 @@
         This will be replaced by the content of header.html
     <!-- /build -->
     <main>
-        <section class="country-banner japan">
+        <section class="country-banner">
+            <i class="japan"></i>
             <div class="container">
                 <span class="icon icon-japan"></span>
                 <h1>Japan</h1>
