--- a/src/indonesia.html
+++ b/src/indonesia.html
@@ -50,14 +50,15 @@
         This will be replaced by the content of header.html
     <!-- /build -->
     <main>
-        <section class="country-banner indonesia">
-            <div class="container">
-                <span class="icon icon-indonesia"></span>
-                <h1>Indonesia</h1>
-                <h2>Indonesia</h2>                
-                <a href="#" class="view-pics btn btn-default">View photos</a>
-                <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Asia/Jakarta"></span></span>
-            </div>
+        <section class="country-banner">
+          <i class="indonesia"></i>
+          <div class="container">
+              <span class="icon icon-indonesia"></span>
+              <h1>Indonesia</h1>
+              <h2>Indonesia</h2>                
+              <a href="#" class="view-pics btn btn-default">View photos</a>
+              <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Asia/Jakarta"></span></span>
+          </div>
         </section>
 
         <section class="white-stripe arrow">
