--- a/src/turkey.html
+++ b/src/turkey.html
@@ -50,14 +50,15 @@
         This will be replaced by the content of header.html
     <!-- /build -->
     <main>
-        <section class="country-banner turkey">
-            <div class="container">
-                <span class="icon icon-turkey"></span>
-                <h1>Turkey</h1>
-                <h2>Türkiye</h2>                
-                <a href="#" class="view-pics btn btn-default">View photos</a>
-                <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Europe/Istanbul"></span></span>
-            </div>
+        <section class="country-banner">
+          <i class="turkey"></i>
+          <div class="container">
+              <span class="icon icon-turkey"></span>
+              <h1>Turkey</h1>
+              <h2>Türkiye</h2>                
+              <a href="#" class="view-pics btn btn-default">View photos</a>
+              <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Europe/Istanbul"></span></span>
+          </div>
         </section>
 
         <section class="white-stripe arrow">
