--- a/src/turkey.html
+++ b/src/turkey.html
@@ -71,7 +71,7 @@
             <div class="container">                
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/flags/turkey-flag.png"/>
+                        <img class="img-responsive" src="img/flags/turkey-flag.png" alt="Turkey flag"/>
                     </div> 
                     <div class="col-sm-4 info">
                         <ul>
@@ -83,7 +83,7 @@
                         </ul>                        
                     </div> 
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/maps/turkey-map.jpg"/>
+                        <img class="img-responsive" src="img/maps/turkey-map.jpg" alt="Turkey map"/>
                     </div>                    
                 </div>
             </div>
