--- a/src/malaysia.html
+++ b/src/malaysia.html
@@ -71,7 +71,7 @@
             <div class="container">                
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/flags/malaysia-flag.png"/>
+                        <img class="img-responsive" src="img/flags/malaysia-flag.png" alt="Malaysia flag"/>
                     </div> 
                     <div class="col-sm-4 info">
                         <ul>
@@ -83,7 +83,7 @@
                         </ul>                        
                     </div> 
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/maps/malaysia-map.jpg"/>
+                        <img class="img-responsive" src="img/maps/malaysia-map.jpg" alt="Malaysia map"/>
                     </div>                    
                 </div>
             </div>
