--- a/src/vietnam.html
+++ b/src/vietnam.html
@@ -71,7 +71,7 @@
             <div class="container">                
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/flags/vietnam-flag.png"/>
+                        <img class="img-responsive" src="img/flags/vietnam-flag.png" alt="Vietnam flag"/>
                     </div> 
                     <div class="col-sm-4 info">
                         <ul>
@@ -83,7 +83,7 @@
                         </ul>                        
                     </div> 
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/maps/vietnam-map.jpg"/>
+                        <img class="img-responsive" src="img/maps/vietnam-map.jpg" alt="Vietnam map"/>
                     </div>                    
                 </div>
             </div>
