Update travel dates

--- a/src/cambodia.html
+++ b/src/cambodia.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 15.14 million</p></li>
                             <li class="icon-language"><p>Language: Khmer</p></li>
                             <li class="icon-currency"><p>Curreny: Riel</p></li>
-                            <li class="icon-calendar-dark"><p>TBC</p></li>
+                            <li class="icon-calendar-dark"><p>18 May - 24 May</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
