--- a/src/malaysia.html
+++ b/src/malaysia.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 29.72 million</p></li>
                             <li class="icon-language"><p>Language: Malay</p></li>
                             <li class="icon-currency"><p>Curreny: Ringgit</p></li>
-                            <li class="icon-calendar-dark"><p>TBC</p></li>
+                            <li class="icon-calendar-dark"><p>19 June - 3 July</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
