--- a/src/thailand.html
+++ b/src/thailand.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 67 million</p></li>
                             <li class="icon-language"><p>Language: Thai</p></li>
                             <li class="icon-currency"><p>Curreny: Baht</p></li>
-                            <li class="icon-calendar-dark"><p>TBC</p></li>
+                            <li class="icon-calendar-dark"><p>24 May - 19 June</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
