--- a/src/turkey.html
+++ b/src/turkey.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 74.93 million</p></li>
                             <li class="icon-language"><p>Language: Turkish</p></li>
                             <li class="icon-currency"><p>Curreny: Turkish lira</p></li>
-                            <li class="icon-calendar-dark"><p>TBC</p></li>
+                            <li class="icon-calendar-dark"><p>28 July - 18 August</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
