--- a/src/vietnam.html
+++ b/src/vietnam.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 89.71 million</p></li>
                             <li class="icon-language"><p>Language: Vietnamese</p></li>
                             <li class="icon-currency"><p>Curreny: đồng</p></li>
-                            <li class="icon-calendar-dark"><p>28 April - tbc</p></li>
+                            <li class="icon-calendar-dark"><p>28 April - 18 May</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
