--- a/src/index.html
+++ b/src/index.html
@@ -30,14 +30,14 @@
     <meta name="theme-color" content="#ffffff">
     <!-- grunticon -->
     <link rel="stylesheet" href="img/icons/icons.data.svg.css" media="all">
-    <script src="js/grunticon.loader.js"></script> 
+    <script src="js/grunticon.loader.js"></script>
     <noscript><link href="img/icons/icons.fallback.css" rel="stylesheet"></noscript>
 
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Libre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
 
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
-    
+
     <title>Follow our journey | Vasilis & Giulia</title>
 </head>
 
@@ -55,38 +55,38 @@
                 <div class="row">
                     <div class="col-xs-2 col-sm-3"></div>
                     <div class="col-xs-4 col-sm-3"><p class="numbers-count"><span>4</span> months</p></div>
-                    <div class="col-xs-4 col-sm-3"><p class="numbers-count"><span>7</span> countries</p></div>      
-                    <div class="col-xs-2 col-sm-3"></div>          
+                    <div class="col-xs-4 col-sm-3"><p class="numbers-count"><span>7</span> countries</p></div>
+                    <div class="col-xs-2 col-sm-3"></div>
                 </div>
                 <span class="counter"><span class="icon icon-daycount"></span>Day <span class="daycount">0</span></span>
             </div>
         </section>
 
         <section class="white-stripe">
-            <div class="container">                
-                <p class="intro-text">Today it's <span id="today"></span> and we are still in Edinburgh...</p>
+            <div class="container">
+                <p class="intro-text">Today it's <span id="today"></span> and we are back in Edinburgh!</p>
             </div>
         </section>
 
         <section class="map-cta">
             <i></i>
-            <div class="container">                
+            <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <a href="map.html" class="btn btn-default">View map</a>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="white-stripe arrow">
-            <div class="container">                
+            <div class="container">
                 <h3>Destinations</h3>
             </div>
         </section>
 
         <section class="timeline">
-            <div class="container">                
+            <div class="container">
                 <div class="row">
                     <a href="japan.html">
                         <div class="country-block col-sm-6">
@@ -96,7 +96,7 @@
                     </a>
                     <div class="date-block col-sm-6">
                         <div><span class="icon icon-calendar"></span>11 April - 28 April</div>
-                    </div>                    
+                    </div>
                 </div>
                 <div class="row">
                     <a href="vietnam.html">
@@ -104,10 +104,10 @@
                             <i class="vt"></i>
                             Vietnam
                         </div>
-                    </a>                        
+                    </a>
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <div><span class="icon icon-calendar"></span>28 April - ...</div>
-                    </div>                                    
+                        <div><span class="icon icon-calendar"></span>28 April - 18 May</div>
+                    </div>
                 </div>
                 <div class="row">
                     <a href="cambodia.html">
@@ -117,19 +117,19 @@
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <div><span class="icon icon-calendar"></span>To be confirmed</div>
-                    </div>                    
+                        <div><span class="icon icon-calendar"></span>18 May - 24 May</div>
+                    </div>
                 </div>
-                <div class="row">   
+                <div class="row">
                     <a href="thailand.html">
                         <div class="country-block reverse col-sm-6 col-sm-push-6">
                             <i class="th"></i>
                             Thailand
                         </div>
-                    </a>                  
+                    </a>
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <div><span class="icon icon-calendar"></span>To be confirmed</div>
-                    </div>                                       
+                        <div><span class="icon icon-calendar"></span>24 May - 19 June</div>
+                    </div>
                 </div>
                 <div class="row">
                     <a href="malaysia.html">
@@ -139,31 +139,31 @@
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <div><span class="icon icon-calendar"></span>... - 6 July</div>
-                    </div>                    
+                        <div><span class="icon icon-calendar"></span>19 June - 3 July</div>
+                    </div>
                 </div>
-                <div class="row">  
+                <div class="row">
                     <a href="indonesia.html">
                         <div class="country-block reverse col-sm-6 col-sm-push-6">
                             <i class="in"></i>
                             Indonesia
                         </div>
-                    </a>                   
+                    </a>
                     <div class="date-block reverse col-sm-6 col-sm-pull-6">
-                        <div><span class="icon icon-calendar"></span>6 July - 28 July</div>
-                    </div>                                       
+                        <div><span class="icon icon-calendar"></span>3 July - 28 July</div>
+                    </div>
                 </div>
                 <div class="row">
                     <a href="turkey.html">
-                        <div class="country-block tr col-sm-6">
+                        <div class="country-block col-sm-6">
                             <i class="tr"></i>
                             Turkey
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
-                        <div><span class="icon icon-calendar"></span>28 July - 3 August</div>
-                    </div>                    
-                </div>                
+                        <div><span class="icon icon-calendar"></span>28 July - 18 August</div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -175,7 +175,7 @@
     </main>
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
-    
+
     <script type="text/javascript">
         document.getElementById("today").innerHTML = formatAMPM();
 
