--- a/src/indonesia.html
+++ b/src/indonesia.html
@@ -79,7 +79,7 @@
                             <li class="icon-population"><p>Population: 249.9 million</p></li>
                             <li class="icon-language"><p>Language: Indonesian</p></li>
                             <li class="icon-currency"><p>Curreny: Rupiah </p></li>
-                            <li class="icon-calendar-dark"><p>TBC</p></li>
+                            <li class="icon-calendar-dark"><p>3 July - 28 July</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
