--- a/src/greece.html
+++ b/src/greece.html
@@ -42,7 +42,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-    <title>Follow our journey | Turkey</title>
+    <title>Follow our journey | Greece</title>
 </head>
 
 <body>
@@ -51,13 +51,13 @@
     <!-- /build -->
     <main>
         <section class="country-banner">
-          <i class="turkey"></i>
+          <i class="greece"></i>
           <div class="container">
-              <span class="icon icon-turkey"></span>
-              <h1>Turkey</h1>
-              <h2>Türkiye</h2>
+              <!-- <span class="icon icon-greece"></span> -->
+              <h1>Greece</h1>
+              <h2>Ελλάδα</h2>
               <a href="#" class="view-pics btn btn-default">View photos</a>
-              <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Europe/Istanbul"></span></span>
+              <span class="counter"><span class="icon icon-watch"></span><span class="local-time" data-tz="Europe/Athens"></span></span>
           </div>
         </section>
 
@@ -71,19 +71,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/flags/turkey-flag.png" alt="Turkey flag"/>
+                        <img class="img-responsive" src="img/flags/greece-flag.png" alt="Greece flag"/>
                     </div>
                     <div class="col-sm-4 info">
                         <ul>
-                            <li class="icon-capital"><p>Capital: Ankara</p></li>
-                            <li class="icon-population"><p>Population: 74.93 million</p></li>
-                            <li class="icon-language"><p>Language: Turkish</p></li>
-                            <li class="icon-currency"><p>Curreny: Turkish lira</p></li>
-                            <li class="icon-calendar-dark"><p>28 July - 18 August</p></li>
+                          <li class="icon-capital"><p>Capital: Athens</p></li>
+                          <li class="icon-population"><p>Population: 11 million</p></li>
+                          <li class="icon-language"><p>Language: Greek</p></li>
+                          <li class="icon-currency"><p>Curreny: Euro</p></li>
+                          <li class="icon-calendar-dark"><p>28 July - 18 August</p></li>
                         </ul>
                     </div>
                     <div class="col-sm-4">
-                        <img class="img-responsive" src="img/maps/turkey-map.jpg" alt="Turkey map"/>
+                        <img class="img-responsive" src="img/maps/greece-map.jpg" alt="Greece map"/>
                     </div>
                 </div>
             </div>
@@ -227,7 +227,7 @@
 
         <footer>
             <div class="container">
-                <p>Designed &amp; coded by Vasilis Tsirimokos</p>
+                <p>Designed &amp; coded by <a href="http://www.vasilis-tsirimokos.com" target="_blank">Vasilis Tsirimokos</a></p>
             </div>
         </footer>
     </main>
