--- a/src/header.html
+++ b/src/header.html
@@ -20,7 +20,7 @@
                 <a href="/" title="Return to the homepage"><span class="icon icon-travel">Travel</span></a>
             </div>
             <div class="col-xs-6">
-                <a href="#cd-nav" title="Menu" class="cd-nav-trigger">Menu 
+                <a href="#cd-nav" title="Menu" class="cd-nav-trigger">Menu
         <span class="cd-nav-icon"></span>
 
         <svg x="0px" y="0px" width="54px" height="54px" viewBox="0 0 54 54">
@@ -52,7 +52,7 @@
                     <li><a href="/thailand.html">Thailand</a></li>
                     <li><a href="/malaysia.html">Malaysia</a></li>
                     <li><a href="/indonesia.html">Indonesia</a></li>
-                    <li><a href="/turkey.html">Turkey</a></li>
+                    <li><a href="/greece.html">Greece</a></li>
                 </ul>
             </div>
         </div>
