--- a/src/index.html
+++ b/src/index.html
@@ -154,10 +154,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <a href="turkey.html">
+                    <a href="greece.html">
                         <div class="country-block col-sm-6">
-                            <i class="tr"></i>
-                            Turkey
+                            <i class="gr"></i>
+                            Greece
                         </div>
                     </a>
                     <div class="date-block col-sm-6">
@@ -169,7 +169,7 @@
 
         <footer>
             <div class="container">
-                <p>Designed &amp; coded by Vasilis Tsirimokos</p>
+                <p>Designed &amp; coded by <a href="http://www.vasilis-tsirimokos.com" target="_blank">Vasilis Tsirimokos</a></p>
             </div>
         </footer>
     </main>
