--- a/src/thailand.html
+++ b/src/thailand.html
@@ -227,7 +227,7 @@
 
         <footer>
             <div class="container">
-                <p>Designed &amp; coded by Vasilis Tsirimokos</p>
+                <p>Designed &amp; coded by <a href="http://www.vasilis-tsirimokos.com" target="_blank">Vasilis Tsirimokos</a></p>
             </div>
         </footer>
     </main>
