Remove placeholder photos

--- a/src/greece.html
+++ b/src/greece.html
@@ -103,115 +103,13 @@
 
 <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_b.jpg" itemprop="contentUrl" data-size="1280x806">
-          <img src="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption  1</figcaption>
-    </figure>
+  <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+    <a href="/img/photos/greece/1.jpg" itemprop="contentUrl" data-size="1024x575">
+        <img src="/img/photos/greece/thumbs/1.jpg" itemprop="thumbnail" alt="Greece" />
+    </a>
+    <figcaption itemprop="caption description">Image caption</figcaption>
+  </figure>
 
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_b.jpg" itemprop="contentUrl" data-size="852x1280">
-          <img src="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 4</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_b.jpg" itemprop="contentUrl" data-size="1280x852">
-          <img src="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_b.jpg" itemprop="contentUrl" data-size="1000x606">
-          <img src="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 3</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_b.jpg" itemprop="contentUrl" data-size="852x1280">
-          <img src="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 4</figcaption>
-    </figure>
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_b.jpg" itemprop="contentUrl" data-size="1024x681">
-          <img src="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Nisyros</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_b.jpg" itemprop="contentUrl" data-size="1280x806">
-          <img src="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption  1</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_b.jpg" itemprop="contentUrl" data-size="1280x852">
-          <img src="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_b.jpg" itemprop="contentUrl" data-size="1000x606">
-          <img src="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 3</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_b.jpg" itemprop="contentUrl" data-size="852x1280">
-          <img src="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 4</figcaption>
-    </figure>
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_b.jpg" itemprop="contentUrl" data-size="1024x681">
-          <img src="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Nisyros</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_b.jpg" itemprop="contentUrl" data-size="1000x606">
-          <img src="//c2.staticflickr.com/6/5819/21837043509_f08dff50fe_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 3</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_b.jpg" itemprop="contentUrl" data-size="1280x806">
-          <img src="//c2.staticflickr.com/6/5740/22011664972_fea522cc49_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption  1</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_b.jpg" itemprop="contentUrl" data-size="1024x681">
-          <img src="http://c2.staticflickr.com/6/5703/21373227001_f6d6a46f20_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Nisyros</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_b.jpg" itemprop="contentUrl" data-size="1280x852">
-          <img src="//c1.staticflickr.com/1/677/21836083428_8b2af645ff_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 2</figcaption>
-    </figure>
-
-    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-      <a href="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_b.jpg" itemprop="contentUrl" data-size="852x1280">
-          <img src="//c2.staticflickr.com/6/5677/22023982855_ceeb0385f4_m.jpg" itemprop="thumbnail" alt="Image description" />
-      </a>
-      <figcaption itemprop="caption description">Image caption 4</figcaption>
-    </figure>
 </div>
 
 
