--- a/src/japan.html
+++ b/src/japan.html
@@ -105,14 +105,14 @@
 
   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <a href="/img/photos/japan/1.jpg" itemprop="contentUrl" data-size="1024x575">
-        <img src="/img/photos/japan/1.jpg" itemprop="thumbnail" alt="Japan" />
+        <img src="/img/photos/japan/thumbs/1.jpg" itemprop="thumbnail" alt="Japan" />
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
 
   <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
     <a href="/img/photos/japan/2.jpg" itemprop="contentUrl" data-size="1024x1024">
-        <img src="/img/photos/japan/2.jpg" itemprop="thumbnail" alt="Japan" />
+        <img src="/img/photos/japan/thumbs/2.jpg" itemprop="thumbnail" alt="Japan" />
     </a>
     <figcaption itemprop="caption description">Image caption</figcaption>
   </figure>
